# DuoDuo

./: Acceptor.cpp  Acceptor.h  Channel.cpp  Channel.h  Connector.cpp  Connector.h  EventLoop.cpp  EventLoop.h  EventLoopThread.cpp  EventLoopThread.h  EventLoopThreadPool.cpp  EventLoopThreadPool.h  InetAddress.cpp  InetAddress.h  MpscQueue.h  Poller.cpp  Poller.h  README.md  Socket.cpp  Socket.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  callbacks.h
base/: Dependence.cpp  Dependence.h  EpollPoller.cpp  EpollPoller.h  any.h  noncopyable.cpp  noncopyable.h
buffer/: BestFitQueue.cpp  BestFitQueue.h  Buffer.cpp  Buffer.h  CMakeLists.txt  MathUtils.h  PoolArena.cpp  PoolArena.h  PoolByteBuf.cpp  PoolByteBuf.h  PoolByteBufAllocator.cpp  PoolByteBufAllocator.h  PoolChunk.cpp  PoolChunk.h  PoolChunkList.cpp  PoolChunkList.h  PoolSubpage.cpp  PoolSubpage.h  PoolThreadCache.cpp  PoolThreadCache.h  README.md  Recycler.cpp  Recycler.h  SizeClass.cpp  SizeClass.h  commons.h  test.cpp
buffer/LongAddr/: DoubleAddr.cpp  DoubleAddr.h  LongAddr.cpp  LongAddr.h  MetaConcurrent.cpp  MetaConcurrent.h  README.md  SpinLock.cpp  SpinLock.h
buffer/LongAddr/test/: CMakeLists.txt  test.cpp
http/: HttpContext.cpp  HttpContext.h  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpServer.cpp  HttpServer.h
http/test/: CMakeLists.txt  HttpServerTest.cpp
test/: CMakeLists.txt  testTcpServer.cpp  testTimer.cpp
timer/: Ticker.cc  Ticker.h  Timer.cc  Timer.h  TimerTaskList.cc  TimerTaskList.h  TimingWheel.cc  TimingWheel.h
timer/delay_queue/: TimeEntry.h
timer/test/: main.cc
结果/: result.txt
